<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7F8FA"
    android:orientation="vertical"
    tools:context=".TextMode">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#E7F8FA">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#E7F8FA"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/chooseDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1.7"
                android:text="@string/date_range"
                app:icon="@drawable/calendar_11015"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toStartOf="@+id/button9" />

            <Button
                android:id="@+id/button7"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.1"
                android:onClick="switchMode"
                app:icon="@drawable/text"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="@android:dimen/app_icon_size"
                android:layout_height="@android:dimen/app_icon_size"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.1"
                app:icon="?android:attr/actionModeFindDrawable"
                app:iconGravity="textStart"
                app:iconPadding="0dp" />

        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#E7F8FA"
        android:text="@string/textTitle"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#E7F8FA"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/totalRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/totalRow"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#E7F8FA"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/respondedRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/responded"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/responded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:text=""
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#E7F8FA"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/dialedRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/dialed"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/dialed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#E7F8FA"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/missedRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/missed"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/missed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#E7F8FA"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/rejectedRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/rejected"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/rejected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:textSize="20dp" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#E1E1E1">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time" />


    </com.google.android.material.tabs.TabLayout>


    <de.codecrafters.tableview.TableView
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="#D9E5E6" />


</LinearLayout>

